Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjBoolObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Integer
        Boolean var
        var:SetValue(true)
        return var
    end
end